# Stock-volatility-and-trend-analysis

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: 01_data_pipeline.ipynb  02_time_series_analysis.ipynb  03_modelling.ipynb  04_monte_carlo.ipynb  05_comparison.ipynb
src/: config.py  data_pipeline.py  models.py  monte_carlo.py  time_series.py
